# TVM_Android_rpc

./: .gitignore  README.md  android_acl.py  android_acl_resnet.py  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/rqg/tvm_rpc/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  log.h  main.cpp  rpc.cc  rpc_env.cc  rpc_server.cc  rpc_server.h  rpc_tracker_client.h  runtime.cc
app/src/main/cpp/include/half/: half.hpp
app/src/main/java/com/rqg/tvm_rpc/: BridgeNative.java  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/rqg/tvm_rpc/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
